<resources>
    <string name="app_name">QRCODE</string>
    <string name="powered_by">Powered by</string>
    <string name="text_match_face">Match face</string>
    <string name="text_match_finger">Match Finger</string>
    <string name="text_back_image">Back image</string>
    <string name="ok">OK</string>
    <string name="text_match_not_found">Fingerprint did not match</string>
    <string name="text_match_found">Fingerprint matched</string>
    <string name="text_title_utme">UTME</string>
    <string name="text_sub_title">Verification</string>
    <string name="text_verify_text">Verify Text</string>
    <string name="text_verify_score">Verify Score</string>
    <string name="text_label_sample">Middle Name</string>
    <string name="sample_text">John</string>
    <string name="error">error</string>
    <string name="empty"></string>
    <string name="text_change_password">First Name</string>
    <string name="text_basic_information">Basic Information</string>
    <string name="text_basic_detail">Enter basic details, fill the fields that are marked compulsory</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_middle_name">Middle Name</string>
    <string name="text_button_next">Next</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_gender">Gender</string>
    <string name="text_score">Score</string>
    <string name="text_registration_number">Registration Number</string>
    <string name="text_image_captured">Image Captured</string>
    <string name="retry">Retry</string>
    <string name="text_start_enrollment">Enroll</string>
    <string name="message_capture">Fingerprint capture was successful. Save enrollment now or recapture fingerprint</string>
    <string name="text_save_enrollment">Save enrollment</string>
    <string name="text_save_enrollment_button">Save Enrollment</string>
    <string name="text_recapture_fprint">Recapture</string>
    <string name="text_start_verify">Verify</string>
    <string name="text_printer_exit">Exit</string>
    <string name="text_save">Save</string>
    <string name="text_cancel_save">Cancel Enrollment</string>
    <string name="text_message_exit_enrollment">You have chosen to cancel this enrollment, Is this what you really want to do?</string>
    <string name="text_yes_cancel">Yes, cancel</string>
    <string name="text_just_kidding">No</string>
    <string name="text_select_print_to_capture">Select Fingerprint Type</string>
    <string name="text_verification_deatils">Verification Details</string>
    <string name="text_field_first_name">First Name</string>
    <string name="text_pre_verification_details">Pre-Verification Details</string>
    <string name="text_pre_detail">Textual information summary. This certifies that all information contained within here are valid or not</string>
    <string name="text_quality_check">Quality Check</string>
    <string name="text_button_continue">Continue</string>
    <string name="text_id_qr_authenticity">IDQR Authenticity</string>
    <string name="authentication_status_not_confirm">Not Confirmed</string>
    <string name="text_fingerprint_verification_not_successful">Fingerprint Verification Failed</string>
    <string name="text_fingerprint_verification_passed">Fingerprint Verification Passed</string>
    <string name="text_ok">OK</string>
    <string name="authentication_status_confirm">Confirmed</string>
    <string name="text_button_continue_to_finger_verification">Continue to Finger Verirfication</string>
    <string name="text_please_stay_infocus">Please wait on the Progress Bar</string>
    <string name="text_id_finger_authenticity">Fingerprint Authentication</string>
    <string name="title_text_image_portrait">Portrait</string>
    <string name="message_text_portarit_error">Multiple or no face was detected in this capture please retry to continue</string>
    <string name="text_preview">Preview</string>
    <string name="text_preview_message">Please select your prefered preview type</string>
    <string name="text_preview_option_card">ID Card</string>
    <string name="text_preview_option_full_html">Full</string>
    <string name="text_save_id_too">Would you like to save the ID card version?</string>
    <string name="text_save_id_version">Save ID</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_title_idqr">IDQR</string>
</resources>
