<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seamfix.qrcode.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        android:contentDescription="@string/text_back_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A1000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/id_button_selection_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/id_match_face"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawable_app_white_round_stroked"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/text_match_face"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/id_match_finger"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawable_app_green_round_stroked"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/text_match_finger"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_water_mark"
                android:drawablePadding="5dp"
                android:text="@string/powered_by"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
