<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.seamfix.qrcode.enrollment.FormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/banner"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:padding="10dp"
            android:text="@string/text_id_qr_authenticity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_round_gray"
            android:drawableEnd="@drawable/ic_do_not_disturb_alt_black_24dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/authentication_status_not_confirm"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_group"
        android:layout_below="@+id/banner"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="-2dp">

        <LinearLayout
            android:id="@+id/form_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/drawable_app_broken_stroke_border"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:id="@+id/id_candidate_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_field_first_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_field_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Emmanuel"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_last_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_field_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Emmanuel"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_registration_number"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_field_registration_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Emmanuel"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/text_score"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/id_field_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="320"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/button_round_gray"
                    android:drawableEnd="@drawable/ic_check_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/text_quality_check"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/drawable_app_green_solid"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/proceed_to_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:text="@string/text_button_continue_to_finger_verification"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>
